@@ -4,15 +4,13 @@
 ; License GNU General Public License version 2 or later; see LICENSE.txt, see LICENSE.php
 ; Note : All ini files need to be saved as UTF-8 - No BOM
 
-A TEXT SEPARATOR="A text separator"
+MOD_BREADCRUMBS_FIELD_HOMETEXT_DESC="This text will be shown as Home entry"
+MOD_BREADCRUMBS_FIELD_HOMETEXT_LABEL="Text for Home entry"
+MOD_BREADCRUMBS_FIELD_SEPARATOR_DESC="A text separator"
+MOD_BREADCRUMBS_FIELD_SEPARATOR_LABEL="Text Separator"
+MOD_BREADCRUMBS_FIELD_SHOWHOME_DESC="Show/Hide the Home element in the Pathway"
+MOD_BREADCRUMBS_FIELD_SHOWHOME_LABEL="Show Home"
+MOD_BREADCRUMBS_FIELD_SHOWLAST_DESC="Show/Hide the last element in the Pathway"
+MOD_BREADCRUMBS_FIELD_SHOWLAST_LABEL="Show Last"
+MOD_BREADCRUMBS_XML_DESCRIPTION="This Module displays the Breadcrumbs"
 MOD_BREADCRUMBS="Breadcrumbs"
-BREADCRUMBS="Breadcrumbs"
-PARAMSHOWHOME="Show/Hide the Home element in the Pathway"
-PARAMSHOWLAST="Show/Hide the last element in the Pathway"
-PARAMHOMETEXT="This text will be shown as Home entry"
-PARAMSHOWCOMPONENT="Show/Hide the Component element in the Pathway"
-SHOW HOME="Show Home"
-SHOW LAST="Show Last"
-TEXT FOR HOME ENTRY="Text for Home entry"
-TEXT SEPARATOR="Text Separator"
-DESCBREADCRUMBS="This Module displays the Breadcrumbs"
